<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zebra.pdfprint.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/devTagContainer"
        android:layout_marginBottom="@dimen/margin_default">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fulldevzebra"
            android:gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:elevation="@dimen/elevation_default"
            android:layout_marginTop="@dimen/margin_default"/>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_printer_selected"
        android:textStyle="bold"
        android:id="@+id/printerSelectionStatus"
        android:layout_below="@id/devTagContainer"
        android:layout_gravity="center_horizontal" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/printerInfoTable"
        android:visibility="gone"
        android:layout_below="@id/printerSelectionStatus"
        android:layout_marginBottom="@dimen/table_elevation">

        <TableRow>

            <TextView
                android:text="@string/printer_name"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:text="(Printer name)"
                android:id="@+id/printerInfoTableName"
                android:paddingLeft="@dimen/margin_small"/>

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/printer_address"
                android:textColor="@android:color/black"
                android:textStyle="bold"  />

            <TextView
                android:text="(Printer address)"
                android:id="@+id/printerInfoTableAddress"
                android:paddingLeft="@dimen/margin_small"/>

        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_height"
        android:id="@+id/selectPrinterButton"
        android:text="Select Printer"
        android:background="@color/zebra_blue"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/button_buffer"
        android:layout_below="@id/printerSelectionStatus"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_pdf_selected"
        android:textStyle="bold"
        android:id="@+id/pdfSelectionStatus"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/selectPrinterButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/upper_margin" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pdfInfoTable"
        android:visibility="gone"
        android:layout_below="@id/pdfSelectionStatus"
        android:layout_marginBottom="@dimen/table_elevation">

        <TableRow>

            <TextView
                android:text="@string/pdf_name"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:text="(PDF name)"
                android:id="@+id/pdfInfoTableName"
                android:paddingLeft="@dimen/margin_small"/>

        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/file_path"
                android:textColor="@android:color/black"
                android:textStyle="bold"  />

            <TextView
                android:text="(PDF Path)"
                android:id="@+id/pdfInfoTablePath"
                android:paddingLeft="@dimen/margin_small"/>

        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:id="@+id/selectPDFButton"
        android:text="@string/select_pdf"
        android:background="@color/zebra_yellow"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_buffer"
        android:layout_below="@id/pdfSelectionStatus"
        android:gravity="center"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_height"
        android:id="@+id/printNowButton"
        android:text="@string/unable_to_print"
        android:background="@color/light_gray"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_below="@id/selectPDFButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/table_elevation" />

</RelativeLayout>
